// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`identity-replicant (automation) > analysis 'automation 1' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "Account is 36 days old",
      "label": "Young account",
      "points": 10,
    },
    {
      "detail": "15 repositories created in a short timeframe (within 24 hours)",
      "label": "Frequent repository creation",
      "points": 25,
    },
    {
      "detail": "Active 23/24 hours, 1h max rest, 4.3 events/hour",
      "label": "24/7 activity pattern",
      "points": 30,
    },
    {
      "detail": "4 commits within very short intervals",
      "label": "High commit frequency",
      "points": 25,
    },
    {
      "detail": "16 repos forked recently",
      "label": "Many recent forks",
      "points": 30,
    },
    {
      "detail": "Activity spread across 55 external repositories",
      "label": "Highly distributed activity",
      "points": 30,
    },
  ],
  "profile": {
    "age": 36,
    "repos": 106,
  },
  "score": 0,
}
`;

exports[`identity-replicant (automation) > analysis 'automation 2' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "Account is 33 days old",
      "label": "Young account",
      "points": 10,
    },
    {
      "detail": "6 commits within very short intervals",
      "label": "High commit frequency",
      "points": 25,
    },
    {
      "detail": "12 PRs in 1 day",
      "label": "Very high PR volume",
      "points": 35,
    },
    {
      "detail": "100% of activity on other people's repos",
      "label": "Mostly external activity",
      "points": 20,
    },
  ],
  "profile": {
    "age": 33,
    "repos": 1,
  },
  "score": 10,
}
`;

exports[`identity-replicant (automation) > analysis 'automation 3' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "Account is 37 days old",
      "label": "Young account",
      "points": 10,
    },
    {
      "detail": "16 commits within very short intervals",
      "label": "High commit frequency",
      "points": 25,
    },
    {
      "detail": "5 repos forked recently",
      "label": "Multiple forks",
      "points": 20,
    },
  ],
  "profile": {
    "age": 37,
    "repos": 33,
  },
  "score": 45,
}
`;

exports[`identity-replicant (automation) > analysis 'automation 4' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 792,
    "repos": 32,
  },
  "score": 100,
}
`;

exports[`identity-replicant (organic) > analysis 'automation 1' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 4576,
    "repos": 27,
  },
  "score": 100,
}
`;

exports[`identity-replicant (organic) > analysis 'automation 2' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 3220,
    "repos": 859,
  },
  "score": 100,
}
`;
